tests/cases/fail/union_arithmetic.p4
def bad(value: int | float) -> float:
    return value + 1
